bug: adjusts positions of elements on landing page and size of background on mobile landing page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -134,7 +134,7 @@ main {
     flex: 1 0 auto;
     /*don't use vh for margin 
       use ems instead */
-    margin-top: 7em;
+    margin-top: 5em;
     margin-bottom: 4em;
     /* why was this padding here? 
     padding-left: .75rem;*/
@@ -162,6 +162,8 @@ main {
 
 #hero1 {
     background: url('../images/hero-images/hero1-img.jpg') no-repeat center center/cover;
+    width: 100%;
+    height: 372px;
 }
 
 #hero2 {
@@ -181,7 +183,6 @@ main {
     align-items: center;
     margin: 0% 6% 0% 6%;
     position: relative;
-    bottom: -1em;
 }
 
 .hero2-first-block-text {
@@ -197,7 +198,7 @@ main {
     margin-right: 6%;
     position: relative;
     height: 18em;
-    bottom: -3em;
+    bottom: -1.5em;
 }
 
 #hero3 {
@@ -251,43 +252,10 @@ main {
 }
 
 .hero1-text2 {
-    bottom: 11em;
+    bottom: 6em;
     right: 1em;
+    font-size: 94%;
 }
-
-/*
-.hero2-text {
-    top: 7.5em;
-    width: 37%;
-    left: .5em;
-}
-
-.new-player-info {
-    top: 7.5em;
-    width: 37%;
-    position: absolute;
-    right: .5em;
-}
-
-.two-player-info {
-    position: absolute;
-    top: 16.3em;
-    width: 64%;
-    left: 4em;
-}
-
-.fav-games-info {
-    position: absolute;
-    top: 24em;
-    width: 82%;
-    left: 2em;
-}
-
-.mailing-list {
-    position: absolute;
-    bottom: 4.4em;
-    left: 3em;
-}*/
 
 /* content pages styling */
 .container {
@@ -673,7 +641,7 @@ footer {
         margin-top: 171px;
     }
     #hero3 {
-        height:28.5em;
+        height:30.5em;
     }
 
     #hero2-content-large-screen {
